welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value Direction
  setDirection(Direction.est)
               ^DwarfCode:7: error: not found: value Direction
  setDirection(Direction.ouest)
               ^