welcome.lessons.welcome.summative.Moria.scala.code
while (estSurBiscuit() || !estFaceMur()) {
  setDirection(Direction.est)
  while(!estSurBiscuit()) {
    avance()
  }
  prendBiscuit()
  setDirection(Direction.ouest)
  while(!estSurBiscuit()) {
    avance()
  }
  recule()
  poseBiscuit()
}
droite()
avance()
gauche()
avance()